# graph-walker

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
src/: bindings.cpp  fastRandom.hpp  matrix.hpp  randomWalks.cpp  randomWalks.hpp  threading.hpp
tests/: test_walker.py
walker/: __init__.py  preprocess.py  preprocessing.py  utils.py  walks.py
